<resources>
    <string name="ip_server">192.168.1.125</string>
    <!--- Login-->
    <string name="app_name">Capital Fresco</string>
    <string name="register">Registro</string>
    <string name="Login_edCorreo">Correo</string>
    <string name="Login_btnIniciaSesion">Iniciar sesión</string>
    <string name="Login_btnRegister">Registrar</string>
    <string name="TvTienecuenta">¿No tienes una cuenta?</string>
    <string name="hint_correo">Correo electronico</string>
    <string name="hint_password">Contraseña</string>
    <string name="LoginSwitch">Mantener sesión iniciada</string>
    <string name="cargando">Cargando</string>
    <string name="Recuerdame">Recordar sesión</string>
    <string name="iniciandosesion">Iniciando sesión</string>
    <string name="correo_invalido">El correo es inválido.
    Ejemplo: usuario@dominio.com</string>
    <string name="contraseña_invalida">La contraseña debe contener mínimo 4 caracteres</string>

    <!--- End Login -->
    <string name="nombre">Nombre completo</string>
    <string name="curp">CURP</string>
    <string name="direccion">Dirección</string>
    <string name="phone_number">Número de telefono</string>
    <string name="title_activity_home2">Home</string>


    <!--Navigation drawer alv :v -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Principal</string>
    <string name="nav_compras">Compras</string>
    <string name="nav_rentas">Rentas</string>
    <string name="nav_misproductos">Mis productos</string>
    <string name="nav_otras_opciones">Otras opciones</string>
    <string name="nav_configuracion">Configuracion</string>
    <string name="nav_cerrarSesion">Cerrar sesión</string>
    <string name="nav_acercade">Acerca de</string>
    <string name="nav_mistierras">Mis tierras</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Otros-->
    <string name="Toast_cierra_sesion">Cerrar sesión</string>
    <string name="Comprar">Comprar</string>
    <string name="Atras">Atras</string>

    <string-array name="spinner_principal_fragment">
        <item>Seleccione una opción</item>
        <item>Productos</item>
        <item>Tierras</item>
    </string-array>
    <string name="rentar">Rentar</string>
    <string-array name="meses_rentas">
        <item>1 Mes</item>
        <item>2 Meses</item>
        <item>3 Meses</item>
        <item>4 Meses</item>
        <item>5 Meses</item>
        <item>6 Meses</item>
        <item>7 Meses</item>
        <item>8 Meses</item>
        <item>9 Meses</item>
        <item>10 Meses</item>
        <item>11 Meses</item>
        <item>1 año</item>
    </string-array>
    <string name="encabezado_spinnerTierra">Tiempo</string>
    <string name="monto_por_mes">Monto por mes: </string>
    <string name="producto_vendido_popup">¡Producto vendido!</string>
    <string name="ver_detalles_compra">Ver detalles</string>
    <string name="Monto">Monto: </string>
    <string name="No_tien_productosRegi">No tiene productos registrados</string>
    <string name="producto">Producto</string>
    <string name="Tierra">Tierra</string>
    <string name="detalles">Details</string>
    <string name="registro_helper_curp">La curp debe contener explicitamente 18 caracteres</string>
    <string name="registro_valida_nombre">Este campo no puede ser mayor a 50 caracteres</string>
    <string name="valida_telefono">Este campo debe contener solo 10 digitos</string>
    <string name="valida_correo">El correo no debe contener más de 40 caracteres</string>
    <string name="check_correo">Correo inválido, ejemplo: usuario@dominio.com</string>
    <string name="reescribe_contra">Valida tu contraseña</string>
    <string name="contraseña_iguales">Las contraseñas deben ser iguales</string>
    <string name="agrega_foto">Agregar foto</string>
    <string name="No_seleccion_imagen">No seleccionó ninguna imagen</string>
    <string name="algo_anda_mal">Algo anda mal...</string>
    <string name="registrarproducto">Registrar producto</string>
    <string name="nombreproducto">Nombre del producto</string>
    <string name="descripcionproducto">Agrega una descripción de tu producto</string>
    <string name="precioproducto">Precio</string>
    <string name="Registrar_producto">Registrar producto</string>
    <string name="seleccionefotos">Seleccione una o más fotos</string>
    <string name="eliminar">Eliminar</string>
    <string name="portada_foto">Elegir como portada</string>
    <string name="no_tiene_productos_vendidos">Aún no ha vendido ningún producto ):</string>
    <string name="compartir">Compartir</string>


    <string name="desliza_para_continuar">Desliza para continuar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="intergrami_es">Capital Fresco es el lugar donde podrás comprar y vender productos agrícolas, además de poder rentar tierras si lo que te gusta es cultivar.</string>
    <string name="Continuar">Continuar</string>
    <string name="debe_agregar_minimo_una_foto">Debe agregar minimo 1 foto</string>
    <string name="debe_agregar_precio">Debe agregar precio al producto</string>
    <string name="debe_agregar_descripcion">Debe agregar una descripción al producto</string>
    <string name="debe_agregar_untitulo">Debe ponerle nombre al producto</string>
</resources>
